--- a/src/MessagingThreadHistory/MessagingThreadHistory.less
+++ b/src/MessagingThreadHistory/MessagingThreadHistory.less
@@ -17,3 +17,11 @@
 .ThreadHistory--FirstMessage {
   margin-top: auto;
 }
+
+// For mobile/tablet
+@media only screen and (max-width: @breakpointM) {
+  .ThreadHistory--Divider {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+}
